# Espresso

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
src/: Espresso.h
src/Espresso/: Misc.h  Objects.h  Operators.h  Serializers.h  Traits.h
test/: Main.cpp
